server.log
[2026-02-19 09:57:48 +0100] [6835] [INFO] Starting gunicorn 25.1.0
[2026-02-19 09:57:48 +0100] [6835] [INFO] Listening at: http://0.0.0.0:5000 (6835)
[2026-02-19 09:57:48 +0100] [6835] [INFO] Using worker: sync
[2026-02-19 09:57:49 +0100] [6835] [INFO] Control socket listening at /home/corentin/trade-analyser-bourse/gunicorn.ctl
[2026-02-19 09:57:49 +0100] [6838] [INFO] Booting worker with pid: 6838
2026-02-19 09:58:07,427 - apscheduler.scheduler - INFO - Adding job tentatively -- it will be properly scheduled when the scheduler starts
2026-02-19 09:58:07,431 - apscheduler.scheduler - INFO - Added job "fetch_market_data_job" to job store "default"
2026-02-19 09:58:07,432 - apscheduler.scheduler - INFO - Scheduler started
2026-02-19 09:58:07,435 - TradingEngine.Market - INFO - 📡 ENGINE: Cycle started...
2026-02-19 09:59:08,978 - TradingEngine.Market - INFO - ✅ ENGINE: Cycle complete. 44 assets.
[2026-02-20 11:00:39 +0100] [2799] [INFO] Starting gunicorn 25.1.0
[2026-02-20 11:00:39 +0100] [2799] [INFO] Listening at: http://0.0.0.0:5000 (2799)
[2026-02-20 11:00:39 +0100] [2799] [INFO] Using worker: gthread
[2026-02-20 11:00:40 +0100] [2803] [INFO] Booting worker with pid: 2803
[2026-02-20 11:00:40 +0100] [2799] [INFO] Control socket listening at /home/corentin/trade-analyser-bourse/gunicorn.ctl
127.0.0.1 - - [20/Feb/2026:11:05:09 +0100] "GET /status HTTP/1.1" 200 127 "-" "curl/8.5.0"
[2026-02-20 11:12:40 +0100] [2799] [INFO] Handling signal: term
[2026-02-20 11:12:40 +0100] [2803] [INFO] Worker exiting (pid: 2803)
[2026-02-20 11:12:40 +0100] [2799] [INFO] Worker (pid:2803) was sent SIGTERM!
[2026-02-20 11:12:40 +0100] [2799] [INFO] Shutting down: Master
[2026-02-27 23:26:59 +0100] [7810] [INFO] Starting gunicorn 25.1.0
[2026-02-27 23:27:00 +0100] [7810] [INFO] Listening at: http://0.0.0.0:5000 (7810)
[2026-02-27 23:27:00 +0100] [7810] [INFO] Using worker: gthread
[2026-02-27 23:27:00 +0100] [7810] [INFO] Control socket listening at /home/corentin/trade-analyser-bourse/gunicorn.ctl
[2026-02-27 23:27:00 +0100] [7813] [INFO] Booting worker with pid: 7813
[2026-02-27 23:27:00 +0100] [7814] [INFO] Booting worker with pid: 7814
[2026-02-27 23:27:05 +0100] [7813] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/arbiter.py", line 708, in spawn_worker
    worker.init_process()
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/workers/gthread.py", line 196, in init_process
    super().init_process()
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/workers/base.py", line 136, in init_process
    self.load_wsgi()
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/workers/base.py", line 148, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/util.py", line 377, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/corentin/trade-analyser-bourse/app.py", line 18, in <module>
    from core.database import init_db, get_db_connection
  File "/home/corentin/trade-analyser-bourse/core/database.py", line 77
    ('RI.PA', 'Pernod Ricard', 'Consommation'), ('PUB.PA', 'Publicis', 'Média'), ('RNO.PA', 'Renault', 'Industrie'), ('SAF.PA', 'Safran', 'Aéronautique'),
IndentationError: unexpected indent
[2026-02-27 23:27:05 +0100] [7813] [INFO] Worker exiting (pid: 7813)
[2026-02-27 23:27:05 +0100] [7814] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/arbiter.py", line 708, in spawn_worker
    worker.init_process()
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/workers/gthread.py", line 196, in init_process
    super().init_process()
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/workers/base.py", line 136, in init_process
    self.load_wsgi()
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/workers/base.py", line 148, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/app/base.py", line 66, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/app/wsgiapp.py", line 57, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/app/wsgiapp.py", line 47, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/corentin/trade-analyser-bourse/venv/lib/python3.12/site-packages/gunicorn/util.py", line 377, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/usr/lib/python3.12/importlib/__init__.py", line 90, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1387, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1360, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1331, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 935, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 995, in exec_module
  File "<frozen importlib._bootstrap>", line 488, in _call_with_frames_removed
  File "/home/corentin/trade-analyser-bourse/app.py", line 18, in <module>
    from core.database import init_db, get_db_connection
  File "/home/corentin/trade-analyser-bourse/core/database.py", line 77
    ('RI.PA', 'Pernod Ricard', 'Consommation'), ('PUB.PA', 'Publicis', 'Média'), ('RNO.PA', 'Renault', 'Industrie'), ('SAF.PA', 'Safran', 'Aéronautique'),
IndentationError: unexpected indent
[2026-02-27 23:27:05 +0100] [7814] [INFO] Worker exiting (pid: 7814)
[2026-02-27 23:27:06 +0100] [7810] [ERROR] Worker (pid:7813) exited with code 3.
[2026-02-27 23:27:06 +0100] [7810] [INFO] Worker (pid:7814) was sent SIGTERM!
[2026-02-27 23:27:06 +0100] [7810] [ERROR] Shutting down: Master
[2026-02-27 23:27:06 +0100] [7810] [ERROR] Reason: Worker failed to boot.
[2026-02-27 23:27:53 +0100] [7834] [INFO] Starting gunicorn 25.1.0
[2026-02-27 23:27:53 +0100] [7834] [INFO] Listening at: http://0.0.0.0:5000 (7834)
[2026-02-27 23:27:53 +0100] [7834] [INFO] Using worker: gthread
[2026-02-27 23:27:53 +0100] [7834] [INFO] Control socket listening at /home/corentin/trade-analyser-bourse/gunicorn.ctl
[2026-02-27 23:27:53 +0100] [7836] [INFO] Booting worker with pid: 7836
[2026-02-27 23:27:53 +0100] [7837] [INFO] Booting worker with pid: 7837
[2026-02-27 23:33:14 +0100] [7837] [INFO] Worker exiting (pid: 7837)
[2026-02-27 23:33:14 +0100] [7834] [INFO] Handling signal: term
[2026-02-27 23:33:14 +0100] [7836] [INFO] Worker exiting (pid: 7836)
[2026-02-27 23:33:17 +0100] [7834] [INFO] Shutting down: Master
